force-app/main/default/objects/Data_Dictionary_Setting__mdt/Data_Dictionary_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Data Dictionary Setting</label>
    <pluralLabel>Data Dictionary Settings</pluralLabel>
</CustomObject>