force-app/main/default/objects/Data_Dictionary_Setting__mdt/fields/Custom_Objects_to_Exclude__c.field-meta.xml
<CustomField>
    <fullName>Custom_Objects_to_Exclude__c</fullName>
    <label>Custom Objects to Exclude</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>