force-app/main/default/objects/Data_Dictionary_Setting__mdt/fields/Custom_Objects_to_Include__c.field-meta.xml
<CustomField>
    <fullName>Custom_Objects_to_Include__c</fullName>
    <label>Custom Objects to Include</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>