force-app/main/default/objects/Data_Dictionary_Setting__mdt/fields/Custom_Settings_to_Include__c.field-meta.xml
<CustomField>
    <fullName>Custom_Settings_to_Include__c</fullName>
    <label>Custom Settings to Include</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>