force-app/main/default/objects/Data_Dictionary_Setting__mdt/fields/DDF_Fields_Exclude_from_Log__c.field-meta.xml
<CustomField>
    <fullName>DDF_Fields_Exclude_from_Log__c</fullName>
    <inlineHelpText>A list of Data Dictionary Fields (one per line) that should not be tracked in the Data Dictionary Change Log. Primarily intended for fields like LastModifiedDate that changes each time the data is synced, but also useful for custom fields you add, etc. that don&apos;t need expanded tracking.</inlineHelpText>
    <label>DDF Fields Exclude from Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>