force-app/main/default/objects/Data_Dictionary_Setting__mdt/fields/DDO_Fields_Exclude_from_Log__c.field-meta.xml
<CustomField>
    <fullName>DDO_Fields_Exclude_from_Log__c</fullName>
    <label>DDO Fields Exclude from Log</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>