force-app/main/default/objects/Data_Dictionary_Setting__mdt/fields/Disable_Field_Page_Layout_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Disable_Field_Page_Layout_Tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disables calculation of which Page Layout(s) a Field is present on. Useful if you have switched to Dynamic Forms, or just don&apos;t care for other reasons. Note this will clear the Page Layouts value from any Data Dictionary Field records that previously had it, generating Change Logs for each record unless that Page_Layouts__c field is in the Excluded list.</inlineHelpText>
    <label>Disable Field/Page Layout Tracking</label>
    <type>Checkbox</type>
</CustomField>