force-app/main/default/objects/Data_Dictionary_Setting__mdt/fields/Field_Names_to_Exclude__c.field-meta.xml
<CustomField>
    <fullName>Field_Names_to_Exclude__c</fullName>
    <inlineHelpText>Use API names, one per line. For example, you may want to exclude system fields such as IsDeleted, SystemModstamp, etc.</inlineHelpText>
    <label>Field Names to Exclude</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>