force-app/main/default/objects/Data_Dictionary_Setting__mdt/fields/Namespaces_to_Exclude__c.field-meta.xml
<CustomField>
    <fullName>Namespaces_to_Exclude__c</fullName>
    <label>Namespaces to Exclude</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>