force-app/main/default/objects/Data_Dictionary_Setting__mdt/fields/Standard_Objects_to_Include__c.field-meta.xml
<CustomField>
    <fullName>Standard_Objects_to_Include__c</fullName>
    <label>Standard Objects to Include</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>