force-app/main/default/objects/Data_Dictionary_Setting__mdt/fields/Tooling_API_Version__c.field-meta.xml
<CustomField>
    <fullName>Tooling_API_Version__c</fullName>
    <defaultValue>&quot;v51.0&quot;</defaultValue>
    <inlineHelpText>Use the format &quot;v51.0&quot; (but without the quotes)</inlineHelpText>
    <label>Tooling API Version</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>